namespaceC/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: network-policy-alex
spec:
  podSelector:
    matchLabels:
      project: namespace-c
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
      - ipBlock:
          cidr: 10.244.130.74/32       
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.130.75/32
